# AChat

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  PRIVACY.md  README.md  _dynamic_ctx.js  _explore_data.py  _fix_settings.js  _read_one.py  build.gradle  gradle.properties  gradlew  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/aftglw/devapi/: FirstLaunchUiTest.kt  SettingsUiTest.kt
app/src/debug/res/values/: network_security.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: label_mapping.json  model.onnx
app/src/main/assets/scripts/emo_night/: story_config.yaml
app/src/main/assets/stickers/呆猫八条/: stickers.json  小猫和小熊贴贴-有一个大爱心在小猫和小熊中间.avif  小猫在思考.avif  小猫好像做错事情了-哭唧唧.avif  小猫张大嘴巴-眼神有点拽.avif  小猫很无语-甚至有点烦.avif  小猫很期待-背景粉嫩.avif  小猫很毛躁.avif  小猫很激动-眼角有泪滴.avif  小猫意志坚定地说-OK.avif  小猫感觉很疲惫的样子.avif  小猫抱着手指-嘬嘬嘬-背景有爱心.avif  小猫拿着锋利的刀-眼神犀利.avif  小猫泪眼婆娑地打电话.avif  小猫用阴暗的眼神回头看.avif  小猫皱起眉头-用强烈的语气说-我恨.avif  小猫瞳孔放大-眼神空洞-背景深灰色.avif  小猫背过身-但内心里是泪眼汪汪的状态.avif  小猫被摸脸-眼里冒光.avif  小猫躲在墙后-探头看.avif  背景有很多爱心-小猫漏出了看可爱的东西的神态.avif
app/src/main/assets/tools/: network_tools.wsptool  utility_tools.wsptool
app/src/main/cpp/: llama_wisp.cpp
app/src/main/java/com/aftglw/devapi/: AboutPage.kt  AffinityManager.kt  (+24 more)
app/src/main/res/drawable/: ic_favorites.xml  ic_moments.xml  ic_nearby.xml  ic_scan_qr.xml  ic_settings.xml  ic_shake.xml
app/src/main/res/layout/: overlay_debug.xml
app/src/main/res/values/: colors.xml  network_security.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+254 files in other folders)
